--- a/docker/ros1-session/Dockerfile
+++ b/docker/ros1-session/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get install -q -y --no-install-recommends apt-utils
 RUN apt-get install -q -y --no-install-recommends ros-noetic-desktop-full
 RUN apt-get install -q -y --no-install-recommends net-tools iproute2 iputils-ping curl
 RUN apt-get install -q -y --no-install-recommends git tmux neovim apt-utils
+RUN apt-get install -q -y --no-install-recommends python-is-python3 python3-pip
 RUN apt-get autoremove -y
 RUN apt-get clean
 RUN rm -rf /var/lib/apt/lists/*
